--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript">
    (function(){
       emailjs.init({
-        publicKey: "YOUR_PUBLIC_KEY",
+        publicKey: "",
       });
    })();
 </script>
